<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myApp="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.myapplication.app.TabActivity" >
    
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        myApp:showAsAction="always"
        android:titleCondensed="@string/action_search"/>
    <item
        android:id="@+id/action_plus"
        android:actionProviderClass="com.example.myapplication.app.PlusActionProvider"
        android:icon="@drawable/ic_action_add_person"
        myApp:showAsAction="always"
        android:title="@string/action_plus"/>
    <item
        android:id="@+id/action_album"
        android:icon="@drawable/ic_action_picture"
        android:title="@string/action_album"/>
    <item
        android:id="@+id/action_collection"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/action_Collection"/>
    <item
        android:id="@+id/action_card"
        android:icon="@drawable/ic_action_warning"
        android:title="@string/action_card"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_feed"
        android:icon="@drawable/ic_action_email"
        android:title="@string/action_aztion_feed"/>
</menu>
